--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TypeScript Frontend</title>
+  <title>Verida: App Connect Example</title>
   <!-- Latest Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
   <div class="container mt-5">
-    <h1 class="text-center text-primary">TypeScript Frontend App</h1>
-    <button id="alertButton" class="btn btn-primary">Click Me</button>
+    <h1 class="text-center text-primary">App Connect Example</h1>
+    <button id="connectButton" class="btn btn-primary">Connect Verida</button>
+    <div id="content"></div>
   </div>
   <!-- Webpack bundle -->
   <script src="dist/bundle.js"></script>
