--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
 <body>
   <div class="container mt-5">
     <h1 class="text-center text-primary">Connect to Verida Example</h1>
+    <div>
+      <p>Use this example application to select the scopes you wish to request, then click "Connect Verida" to be directed to the Verida Vault to obtain an API authentication token.</p>
+    </div>
     <div id="scopes">
       <h3>Available scopes</h3>
       <!-- Container where checkboxes will be injected via JS -->
