Add Verida Connect button

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <div id="connect" class="row">
       <hr />
       <div>
-        <button id="connectButton" class="btn btn-primary">Connect Verida</button>
+        <a href="#" id="connectButton" class=""><img src="https://assets.verida.io/auth/Connect-Verida.png" /></a>
       </div>
       <div>
         <p>Connect URL:</p>
